--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ members = [
     "testing/test-test_logger",
     "testing/state_transition_vectors",
     "testing/web3signer_tests",
+    "testing/custom_reward_test",
 
     "validator_client",
     "validator_client/beacon_node_fallback",
